examples/test/testpolicy14288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14288
  namespace: namespace466
spec:
  podSelector:
    matchLabels:
      key12: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value39
          key38: value48
      podSelector:
        matchLabels:
          key7: value45
          key44: value39
